# Core dependency
#add_subdirectory(armadillo-utils) #done by the root CMakeLists.txt

# audioengine (currently required by gui and osc)
IF(SUPPORT_AUDIO AND SNDFILE_FOUND AND (OPENAL_FOUND OR PORTAUDIO_FOUND))
	add_subdirectory(audioengine)
ELSE()
	MESSAGE("[ ] audioengine")
ENDIF()

# OSC and Apple multitouch trackpad support (not ready)
IF(USE_APPLE_MULTITOUCH)
	ADD_SUBDIRECTORY(io-applemultitouch)
ELSE()
	MESSAGE("[ ] mediacycle-io-applemultitouch")
ENDIF()
IF(USE_OSC)
	ADD_SUBDIRECTORY(io-osc)
ELSE()
	MESSAGE("[ ] mediacycle-io-osc")
ENDIF()

# gui (requires core, audioengine, optionally osc)
IF(USE_OSG)
	add_subdirectory(gui-osg)
	IF(USE_COCOA)
		add_subdirectory(gui-osg-cocoa)
	ENDIF()
	IF(USE_QT4)
		add_subdirectory(gui-osg-qt)
	ENDIF()
ENDIF()

# audiofeatures (required by some apps and plugins)
IF(SUPPORT_AUDIO AND SNDFILE_FOUND AND SAMPLERATE_FOUND AND USE_AUDIOFEAT)
	add_subdirectory(audiofeatures)
ELSE()
	MESSAGE("[ ] audiofeatures")
ENDIF()

# laughterfeatures
IF(SUPPORT_AUDIO AND SNDFILE_FOUND AND SAMPLERATE_FOUND AND USE_LAUGHFEAT)
	add_subdirectory(laughterfeatures)
ELSE()
	MESSAGE("[ ] laughterfeatures")
ENDIF()

# audiogarden audio synthesis library (required by audiogarden apps and plugins)
IF(SUPPORT_AUDIO AND USE_AUDIOGARDEN AND USE_AUDIOFEAT)
	add_subdirectory(audiogarden-synthesis)
ELSE()
	MESSAGE("[ ] audiogarden-synthesis")
ENDIF()

# vamp-plugin-interface (required by some plugins and tests)
IF(SUPPORT_AUDIO AND USE_VAMP)
	add_subdirectory(vamp-plugin-interface)
ELSE()
	MESSAGE("[ ] vamp-plugin-interface")
ENDIF()

# audiofeatures (required by some apps and plugins)
IF(SUPPORT_TEXT)
	add_subdirectory(textfeatures)
ELSE()
	MESSAGE("[ ] textfeatures")
ENDIF()

#sparseMatrix for text mining
#IF(SUPPORT_TEXT)
#	add_subdirectory(SparseMatrix)
#ELSE()
#	MESSAGE("[ ] SparseMatrix")
#ENDIF()
