MESSAGE("\nLibraries:")

FILE(GLOB DIRLIST * )

SET(FOLDERNAME "libs")
FOREACH(LIBDIR ${DIRLIST})
    IF(IS_DIRECTORY ${LIBDIR})
	GET_FILENAME_COMPONENT(APPNAME ${LIBDIR} NAME)
	IF ("${LIBDIR}" MATCHES "armadillo-utils")
		# Core dependency, done by the root CMakeLists.txt
	ELSE()
		ADD_SUBDIRECTORY(${LIBDIR})
	ENDIF()
    ENDIF()
ENDFOREACH()
