IF ( APPLE )
	FILE(GLOB SRC *.m *.mm *.nib)
	FILE(GLOB HDR *.h)

	INCLUDE_DIRECTORIES(. ../../gui/osg ../../gui/osg-cocoa)

	SET(APP_TYPE MACOSX_BUNDLE)
	ADD_EXECUTABLE(audiocycle-osg-cocoa ${APP_TYPE} ${MACOSX_BUNDLE_INFO_PLIST} ${SRC} ${HDR})
	ADD_DEPENDENCIES(audiocycle-osg-cocoa mediacycle)
	ADD_DEPENDENCIES(audiocycle-osg-cocoa mediacycle-osg)
	ADD_DEPENDENCIES(audiocycle-osg-cocoa mediacycle-osg-cocoa)
	ADD_DEPENDENCIES(audiocycle-osg-cocoa audioengine)
	set_target_properties(audiocycle-osg-cocoa PROPERTIES MACOSX_BUNDLE_INFO_PLIST ${CMAKE_SOURCE_DIR}/apps/audiocycle-osg-cocoa/Info.plist)
	set_source_files_properties(MainMenu.nib PROPERTIES MACOSX_PACKAGE_LOCATION Resources)
	TARGET_LINK_LIBRARIES(audiocycle-osg-cocoa mediacycle)
	TARGET_LINK_LIBRARIES(audiocycle-osg-cocoa mediacycle-osg)
	TARGET_LINK_LIBRARIES(audiocycle-osg-cocoa mediacycle-osg-cocoa)
	TARGET_LINK_LIBRARIES(audiocycle-osg-cocoa TiCommon TiIo TiRendering)
	TARGET_LINK_LIBRARIES(audiocycle-osg-cocoa osg osgDB osgGA osgViewer)
	TARGET_LINK_LIBRARIES(audiocycle-osg-cocoa audioengine)

	set(CMAKE_EXE_LINKER_FLAGS "-framework CoreVideo -framework AppKit -framework Foundation -framework AudioToolbox")

	IF ( OPENGL_FOUND AND GLUT_FOUND)
		TARGET_LINK_LIBRARIES(audiocycle-osg-cocoa ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES})
	ELSE ( OPENGL_FOUND AND GLUT_FOUND )
		MESSAGE(FATAL_ERROR "OpenGL/Glut requested but not found.")
	ENDIF ( OPENGL_FOUND AND GLUT_FOUND )

	IF ( OPENAL_FOUND)
		TARGET_LINK_LIBRARIES(audiocycle-osg-cocoa ${OPENAL_LIBRARY})
	ELSE ( OPENAL_FOUND)
		MESSAGE(FATAL_ERROR "OpenAL requested but not found.")
	ENDIF ( OPENAL_FOUND)
ENDIF ( APPLE )
